Home component is made, and problem with Routing is solved

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+.container{
+  display: flex;
+  justify-content: center;
+}
+
+.dashboard-container{
+  border: 2px solid #000;
+  height:80vh;
+  width: 900px;
+}
