--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <app-header></app-header>
+<!--<router-outlet></router-outlet>-->
+<app-footer></app-footer>
 <div>caoste</div>
 <app-footer class="footer-sticky"></app-footer>
