--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,3 +1,4 @@
-<app-header></app-header>
-<router-outlet></router-outlet>
-<app-footer></app-footer>
+<!--<app-header></app-header>-->
+<!--<p>dashboard</p>-->
+<a routerLink="/" class="btn btn-danger">Back</a>
+<!--<app-footer></app-footer>-->
