components are made

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
 <!--<app-header></app-header>-->
 <!--<p>dashboard</p>-->
-<a routerLink="/" class="btn btn-danger">Back</a>
+<a routerLink="/dashboard" class="btn btn-danger">Back</a>
 <!--<app-footer></app-footer>-->
