--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -6,13 +6,13 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Users</a>
+        <a class="nav-link btn-outline-info rounded-3" href="/dashboard/user">Users</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Reservations</a>
+        <a class="nav-link btn-outline-info rounded-3" href="/dashboard/reservation">Reservations</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/dashboard">Rooms</a>
+        <a class="nav-link btn-outline-info rounded-3" routerLink="/dashboard/room">Rooms</a>
       </li>
       <!--      <li class="nav-item">-->
       <!--        <a class="nav-link disabled" href="#">Disabled</a>-->
