user, reservation show all are made

--- a/src/app/components/reservation/reservation.component.html
+++ b/src/app/components/reservation/reservation.component.html
@@ -1,1 +1,4 @@
-<p>reservation works!</p>
+<app-reservation-item
+  *ngFor="let reservation of reservations"
+  [reservation]="reservation"
+></app-reservation-item>
