Added a method to reservation.html

--- a/src/app/components/reservation-item/reservation-item.component.html
+++ b/src/app/components/reservation-item/reservation-item.component.html
@@ -1,10 +1,24 @@
 <div class="container-lg mt-5">
   <div class="card">
-    <h5 class="card-header">{{reservation?.name}}</h5>
+    <h5 class="card-header">{{reservation?.name}}
+      <fa-icon
+        (click)="deleteReservation(reservation)"
+        [ngStyle]="{'color':'#f00','float':'right'}"
+        [icon]="faDelete"
+        class="pointer">
+      </fa-icon>
+    </h5>
     <div class="card-body">
       <h5 class="card-title">
-
-        {{reservation?.startedAt}} - {{reservation?.finishedAt}}</h5>
+        <fa-icon
+          [icon]="faClock"
+        >
+        </fa-icon>{{reservation?.startedAt}}<br>
+        <fa-icon
+          [icon]="faClock"
+        >
+        </fa-icon>{{reservation?.finishedAt}}
+      </h5>
       <p class="card-text">{{reservation?.status}}</p>
       <a href="#" class="btn btn-primary">Go somewhere</a>
     </div>
