--- a/src/app/components/reservation/reservation.component.html
+++ b/src/app/components/reservation/reservation.component.html
@@ -1,4 +1,5 @@
 <app-reservation-item
   *ngFor="let reservation of reservations"
   [reservation]="reservation"
+  (deleteReservationTask)="deleteReservationById(reservation)"
 ></app-reservation-item>
