--- a/src/app/components/room/room.component.html
+++ b/src/app/components/room/room.component.html
@@ -1,6 +1,7 @@
-  <app-room-item
-    *ngFor="let room of rooms"
-    [room]="room"
-  >
-  </app-room-item>
+<app-room-item
+  *ngFor="let room of rooms"
+  [room]="room"
+  (onDeleteRoom)="deleteRoom(room)"
+>
+</app-room-item>
 
