--- a/src/app/components/user-item/user-item.component.html
+++ b/src/app/components/user-item/user-item.component.html
@@ -6,6 +6,7 @@
       <p class="card-text">Email: {{user?.email}}</p>
       <p class="card-text">Phone: {{user?.phone}}</p>
       <a href="#" (click)="onClickMakeReservation" class="btn btn-primary">Go somewhere</a>
+      <a href="#" class="btn btn-danger" (click)="onDelete(user)">Delete</a>
     </div>
   </div>
 </div>
