--- a/src/app/components/room-item/room-item.component.html
+++ b/src/app/components/room-item/room-item.component.html
@@ -7,6 +7,11 @@
         [icon]="faDelete"
         class="pointer">
       </fa-icon>
+      <fa-icon
+        [ngStyle]="{'color':'#000','float':'right', 'margin':'0px 10px'}"
+        [icon]="faEye"
+        class="pointer">
+      </fa-icon>
     </h5>
     <div class="card-body">
       <h5 class="card-title">{{room?.name}}</h5>
