--- a/src/styles.css
+++ b/src/styles.css
@@ -27,3 +27,6 @@
 .no-margin{
   margin-bottom: 5px;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
