--- a/src/app/components/room-item/room-item.component.html
+++ b/src/app/components/room-item/room-item.component.html
@@ -1,6 +1,6 @@
 <div class="container-lg mt-5">
   <div class="card">
-    <h5 class="card-header">Room #{{room?.id}}
+    <h1 class="card-header">Room #{{room?.id}}
       <fa-icon
         (click)="onDelete(room)"
         [ngStyle]="{'color':'#f00','float':'right'}"
@@ -8,11 +8,12 @@
         class="pointer">
       </fa-icon>
       <fa-icon
+        (click)="showModalToggle(room)"
         [ngStyle]="{'color':'#000','float':'right', 'margin':'0px 10px'}"
         [icon]="faEye"
         class="pointer">
       </fa-icon>
-    </h5>
+    </h1>
     <div class="card-body">
       <h5 class="card-title">{{room?.name}}</h5>
       <p class="card-text no-margin">Located at {{room?.location}}</p>
