--- a/src/app/components/user-item/user-item.component.html
+++ b/src/app/components/user-item/user-item.component.html
@@ -8,6 +8,7 @@
         class="pointer">
       </fa-icon>
       <fa-icon
+        (click)="showModalToggle(user)"
         [ngStyle]="{'color':'#000','float':'right', 'margin':'0px 10px'}"
         [icon]="faEye"
         class="pointer">
