--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -2,4 +2,10 @@
   *ngFor="let user of users"
   (onDeleteUser) = "deleteUser(user)"
   [user]="user"
+  (onShowModalUser)="onModalToggle(user)"
 ></app-user-item>
+<app-modal-user
+  *ngIf="modalService.showDialog"
+  [user]="selectedUser"
+  (onDeleteTrigger)="deleteTrigger($event)"
+></app-modal-user>
