--- a/src/app/components/reservation/reservation.component.html
+++ b/src/app/components/reservation/reservation.component.html
@@ -2,4 +2,10 @@
   *ngFor="let reservation of reservations"
   [reservation]="reservation"
   (deleteReservationTask)="deleteReservationById(reservation)"
+  (onShowModal)="onModalToggle(reservation)"
 ></app-reservation-item>
+<app-modal-reservation
+  *ngIf="modalService.showDialog"
+  [reservation]="selectedReservation"
+  (onDeleteTrigger)="deleteTrigger($event)"
+></app-modal-reservation>
