--- a/src/app/components/room/room.component.html
+++ b/src/app/components/room/room.component.html
@@ -9,6 +9,8 @@
   *ngIf="regularModalVisible"
   [room]="selectedRoom"
   (onDeleteTrigger)="deleteTrigger($event)"
+  (close)="regularModalVisible=false"
+
 ></app-modal-temp>
 
 
