capacity icon on modal-room are implemented

--- a/src/app/components/modal-temp/modal-temp.component.html
+++ b/src/app/components/modal-temp/modal-temp.component.html
@@ -12,6 +12,9 @@
           <fa-icon [icon]="faLocationDot"></fa-icon> {{room?.location}}
         </h3>
         <h3>
+          <fa-icon [icon]="faPeopleGroup"></fa-icon> {{room?.capacity}}
+        </h3>
+        <h3>
           <fa-icon [icon]="faTv"></fa-icon> {{room?.tv  ? 'ima' : 'nema'}}
         </h3>
         <h3>
