--- a/src/styles.css
+++ b/src/styles.css
@@ -36,3 +36,24 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   border:1px solid #2bda91;
   color:#000;
 }
+
+.insert-new-item{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+.insert-new-item input, select{
+  margin-top: 10px;
+}
+
+#close-button-new-res{
+  float:right;
+}
+
+.modal-normal-header{
+  display: flex;
+  justify-content: space-between;
+  align-items:center;
+}
