Solving problems with updating data, insert Room and Reservation is done for now.

--- a/src/app/components/modal-new-room/modal-new-room.component.html
+++ b/src/app/components/modal-new-room/modal-new-room.component.html
@@ -5,7 +5,7 @@
         <h1>Make new room</h1>
           <button type="button"
                   class="btn-close move-right"
-                  id="close-button-new-res"
+                  id="close-button-new"
                   data-bs-dismiss="modal"
                   aria-label="Close"
                   (click)="onClose()"
