--- a/src/app/components/edit-reservation/edit-reservation.component.html
+++ b/src/app/components/edit-reservation/edit-reservation.component.html
@@ -2,18 +2,22 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h1 class="modal-title">Edit room #{{reservation?.id}}</h1>
+        <h1 class="modal-title">Edit reservation #{{reservation?.id}}</h1>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"
                 (click)="onClose()"
         ></button>
       </div>
       <div class="modal-body">
         <form novalidate [formGroup]="editReservationForm" (ngSubmit)="onSubmit()">
+          <pre>
+            {{editReservationForm.value|json}}
+          </pre>
           <div class="form-group rounded-5">
             <label for="reservationStartedAt">StartedAt:</label>
             <input type="datetime-local" name="reservationStartedAt" id="reservationStartedAt"
                    formControlName="startedAt" class="form-control">
           </div>
+
           <div class="form-group rounded-5">
             <label for="reservationFinishedAt">FinishedAt:</label>
             <input type="datetime-local" name="reservationFinishedAt" id="reservationFinishedAt"
@@ -29,9 +33,22 @@
             <input type="text" name="reservationStatus" id="reservationStatus"
                    formControlName="status" class="form-control">
           </div>
-<!--          <div>-->
-<!--            {{editReservationForm.value|json}}-->
-<!--          </div>-->
+          <div class="form-group rounded-5">
+            <label for="reservationRoom">Room:</label>
+            <select name="reservationRoom"
+                    id="reservationRoom"
+                    formControlName="room"
+                    class="form-control mb-2">
+              <option selected>
+                {{reservatedRoom}}
+              </option>
+              <option
+                *ngFor="let room of rooms"
+                [ngValue]="room.id">
+                {{room.name}}
+              </option>
+            </select>
+          </div>
           <button type="submit" class="btn btn-primary">Submit</button>
           <button class="btn btn-danger ms-3" (click)="onClose()">Cancel</button>
         </form>
