login and registration form

--- a/src/styles.css
+++ b/src/styles.css
@@ -36,3 +36,10 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   border:1px solid #2bda91;
   color:#000;
 }
+
+.wrapper{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
