--- a/src/app/components/edit-room/edit-room.component.html
+++ b/src/app/components/edit-room/edit-room.component.html
@@ -16,8 +16,12 @@
           </div>
           <div class="form-group rounded-5">
             <label for="roomLocation">Lokacija:</label>
-            <input type="text" name="roomLocation" id="roomLocation"
-                   formControlName="location" class="form-control">
+<!--            <input type="text" name="roomLocation" id="roomLocation"-->
+<!--                   formControlName="location" class="form-control">-->
+            <select name="roomLocation" id="roomLocation" formControlName="location" class="form-control">
+              <option value="Nazor">Nazor</option>
+              <option value="Galerija">Galerija</option>
+            </select>
           </div>
           <div class="form-group rounded-5">
             <label for="roomCapacity">Kapacitet:</label>
