changes on design modals

--- a/src/app/components/edit-reservation/edit-reservation.component.html
+++ b/src/app/components/edit-reservation/edit-reservation.component.html
@@ -9,9 +9,9 @@
       </div>
       <div class="modal-body">
         <form novalidate [formGroup]="editReservationForm" (ngSubmit)="onSubmit()">
-          <pre>
-            {{editReservationForm.value|json}}
-          </pre>
+<!--          <pre>-->
+<!--            {{editReservationForm.value|json}}-->
+<!--          </pre>-->
           <div class="form-group rounded-5">
             <label for="reservationStartedAt">StartedAt:</label>
             <input type="datetime-local" name="reservationStartedAt" id="reservationStartedAt"
@@ -48,10 +48,12 @@
 
             </select>
           </div>
-<!--          <input type="hidden" id="reservationHost" name="reservationHost" formControlName="host" value="{{reservation?.host}}">-->
-          <!-- host remaining unchanged-->
-          <button type="submit" class="btn btn-primary">Submit</button>
-          <button class="btn btn-danger ms-3" (click)="onClose()">Cancel</button>
+<!--                    <input type="hidden" id="reservationHost" name="reservationHost" formControlName="host" value="{{reservation?.host}}">-->
+<!--           host remaining unchanged-->
+          <div class="modal-footer">
+            <button type="submit" class="btn btn-success">Submit</button>
+            <button class="btn btn-danger ms-3" (click)="onClose()">Cancel</button>
+          </div>
         </form>
       </div>
     </div>
