--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -3,15 +3,18 @@
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
+  <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
     <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link btn-outline-info rounded-3" href="#">Home</a>
+      </li>
       <li class="nav-item active">
         <a class="nav-link btn-outline-info rounded-3" href="/dashboard/user">Users</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item active">
         <a class="nav-link btn-outline-info rounded-3" href="/dashboard/reservation">Reservations</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item active">
         <a class="nav-link btn-outline-info rounded-3" routerLink="/dashboard/room">Rooms</a>
       </li>
       <!--      <li class="nav-item">-->
